prod/client/client-service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wavesmusicplayer
  name: waves-client-web-prod-stable-service
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: waves-client-web-prod
  type: ClusterIP
